force-app/main/default/objects/Billing_Details_and_Feedback__c/Billing_Details_and_Feedback__c.object-meta.xml
<CustomObject>
    <label>Billing Details and Feedback</label>
    <nameField>
        <displayFormat>bill-{000}</displayFormat>
        <label>Billing Details and Feedback Name Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Details and Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>