force-app/main/default/objects/Billing_Details_and_Feedback__c/fields/Payment_Paid__c.field-meta.xml
<CustomField>
    <fullName>Payment_Paid__c</fullName>
    <label>Payment Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>