force-app/main/default/objects/Billing_Details_and_Feedback__c/fields/Rating_for_service__c.field-meta.xml
<CustomField>
    <fullName>Rating_for_service__c</fullName>
    <label>Rating for service</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>