force-app/main/default/objects/Billing_Details_and_Feedback__c/fields/Service_Records__c.field-meta.xml
<CustomField>
    <fullName>Service_Records__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Records</label>
    <referenceTo>Service_Records__c</referenceTo>
    <relationshipLabel>Billing Details and Feedback</relationshipLabel>
    <relationshipName>Billing_Details_and_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>