force-app/main/default/objects/Billing_Details_and_Feedback__c/validationRules/rating_should_be_less_than_5.validationRule-meta.xml
<ValidationRule>
    <fullName>rating_should_be_less_than_5</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( Rating_for_service__c , &quot;[1-5]{1}&quot;))</errorConditionFormula>
    <errorDisplayField>Rating_for_service__c</errorDisplayField>
    <errorMessage>Rating should be from 1 to 5</errorMessage>
</ValidationRule>